Perkin-UAT/force-app/main/default/objects/CartItem/fields/B2B_Subscription_Item__c.field-meta.xml
<CustomField>
    <fullName>B2B_Subscription_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Subscription Item</label>
    <referenceTo>B2B_Subscription_Items__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>