Perkin-UAT/force-app/main/default/objects/CartItem/fields/B2B_Subscription_Price__c.field-meta.xml
<CustomField>
    <fullName>B2B_Subscription_Price__c</fullName>
    <description>This will be the subscription price which will be used to override the b2b cart item prices</description>
    <label>B2B Subscription Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>